[tool.poetry]
name = "discord-bot-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
python-dotenv = "^0.17.1"
youtube-dl = "^2021.4.26"
gtts = "^2.2.2"
mutagen = "^1.45.1"
flask = "^1.1.2"
joke-generator = "^1.0.1"
PyNaCl = "^1.4.0"
tinydb = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
